# nexhacks

./: .gitignore  AGENTS.md  README.md
backend/: README.md  agent.py  example.py  livekit.toml  pyproject.toml  read_gmail.py  tools.py
docs/: project.md  schema.sql
docs/migrations/: 001_add_gmail_fields.sql
frontend/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/gmail/: _arcadeEnv.ts
frontend/app/api/gmail/authorize/: route.ts
frontend/app/api/gmail/snooze/: route.ts
frontend/app/api/gmail/status/: route.ts
frontend/app/api/import-ics/: route.ts
frontend/app/api/kick-participant/: route.ts
frontend/app/api/livekit-token/: route.ts
frontend/app/api/trigger-agent/: route.ts
frontend/app/auth/: page.tsx
frontend/app/console/: ConsoleClient.tsx  DayNavigator.tsx  EventCard.tsx  ImportButton.tsx  ImportICSModal.tsx  SettingsModal.tsx  TaskModal.tsx  TimezoneDisplay.tsx  page.tsx
frontend/app/talk/: page.tsx
frontend/lib/supabase/: client.ts  middleware.ts  server.ts
livekit-voice-agent/: agent.ts  package.json  pnpm-lock.yaml  tetra-tools.ts
