[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit>=1.0.23",
    "livekit-agents[turn-detector]~=1.3",
    "livekit-plugins-assemblyai>=1.3.11",
    "livekit-plugins-cartesia>=1.3.11",
    "livekit-plugins-google>=1.3.11",
    "livekit-plugins-silero>=1.3.11",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
]
